--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Title that appears on the tab -->
-  <title>Codevia Tech</title>
+  <title>Codevia</title>
   <!-- Description for search engine and social media -->
   <meta name="description" 
-        content="Codevia Tech, fikirlerinizi dijital çözümlere dönüştürür.
+        content="Codevia, fikirlerinizi dijital çözümlere dönüştürür.
         Web geliştirme, mobil uygulama ve yaratıcı tasarım hizmetlerimizle 
         hayallerinizi gerçeğe taşıyoruz." 
   />
@@ -17,20 +17,20 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
   <!-- Hint for search engines -->
   <meta name="keywords" 
-        content="Codevia Tech, yazılım, web geliştirme, mobil uygulama,
+        content="Codevia, yazılım, web geliştirme, mobil uygulama,
         dijital dönüşüm, teknoloji çözümleri" 
   />
   <!-- Icon in browser tab-->
   <link rel="icon" type="image/png" href="/favicon.png" />
   <!-- For social media sharing (Open Graph) -->
-  <meta property="og:title" content="Codevia Tech - Turning Ideas into Digital Reality" />
+  <meta property="og:title" content="Codevia - Turning Ideas into Digital Reality" />
   <meta property="og:description" content="Fikirlerinizi dijital çözümlere dönüştüren teknoloji şirketi." />
   <meta property="og:image" content="/preview.png" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://codeviatech.com" />
   <!-- Card setup for Twitter (X) -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Codevia Tech - Turning Ideas into Digital Reality" />
+  <meta name="twitter:title" content="Codevia - Turning Ideas into Digital Reality" />
   <meta name="twitter:description" content="Fikirlerinizi dijital çözümlere dönüştüren teknoloji şirketi." />
   <meta name="twitter:image" content="/preview.png" />
   </head>
