Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- For social media sharing (Open Graph) -->
   <meta property="og:title" content="Codevia - Ideas from You, Codes from Us" />
   <meta property="og:description" content="A technology company that transforms your ideas into digital solutions." />
-  <meta property="og:image" content="/preview.png" />
+  <meta property="og:image" content="/codevia-fullname-logo.JPG" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://codeviatech.com" />
   <!-- Card setup for Twitter (X) -->
