--- a/index.html
+++ b/index.html
@@ -1,43 +1,43 @@
 <!doctype html>
 <html lang="en">
   <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- Title that appears on the tab -->
-  <title>Codevia | Web Development, Mobile Apps & Digital Solutions</title>
-  <!-- Description for search engine and social media -->
-  <meta name="description" 
-        content="Codevia offers web development, mobile application, and creative design solutions.
-                 We turn your ideas into innovative digital products, helping your business grow." 
-  />
-  <meta name="theme-color" content="#0f172a" />
-    <link rel="canonical" href="https://codeviatech.com/" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" type="image/png" href="/favicon.png" />
-  <!-- Hint for search engines -->
-  <meta name="keywords" content=
-    "Codevia, Codevia Tech, yazılım, software, web geliştirme, web development, mobil uygulama, mobile app, uygulama geliştirme, app development,
-    UI/UX tasarım, UI/UX design, creative design, dijital dönüşüm, digital transformation, teknoloji çözümleri, technology solutions,
-    startup, girişimcilik, entrepreneurship, innovation, inovasyon, modern arayüzler, modern interfaces, cloud solutions, bulut çözümleri,
-    full stack development, backend development, frontend development, React, Node.js, API entegrasyonu, API integration,
-    kurumsal yazılım, enterprise software, e-ticaret çözümleri, e-commerce solutions, responsive design, responsive tasarım,
-    kullanıcı deneyimi, user experience, kullanıcı arayüzü, user interface, product design, ürün tasarımı, proje yönetimi, project management,
-    agile development, çevik yazılım, digital strategy, dijital strateji"
-  />
+    <!-- Title -->
+    <title>Codevia | Web Development, Mobile Apps & Digital Solutions</title>
 
-  <!-- Icon in browser tab-->
-  <link rel="icon" type="image/png" href="/favicon.png" />
-  <!-- For social media sharing (Open Graph) -->
-  <meta property="og:title" content="Codevia - Ideas from You, Codes from Us" />
-  <meta property="og:description" content="A technology company that transforms your ideas into digital solutions." />
-  <meta property="og:image" content="/codevia-fullname-logo.JPG" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://codeviatech.com" />
-  <!-- Card setup for Twitter (X) -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Codevia - Ideas from You, Codes from Us" />
-  <meta name="twitter:description" content="A technology company that transforms your ideas into digital solutions." />
-  <meta name="twitter:image" content="/preview.png" />
+    <!-- SEO -->
+    <meta
+      name="description"
+      content="Codevia offers web development, mobile application, and creative design solutions. We turn your ideas into innovative digital products, helping your business grow."
+    />
+    <meta name="keywords" content="Codevia, Codevia Tech, yazılım, software, web geliştirme, web development, mobil uygulama, mobile app, uygulama geliştirme, app development, UI/UX tasarım, UI/UX design, creative design, dijital dönüşüm, digital transformation, teknoloji çözümleri, technology solutions, startup, girişimcilik, entrepreneurship, innovation, inovasyon, modern arayüzler, modern interfaces, cloud solutions, bulut çözümleri, full stack development, backend development, frontend development, React, Node.js, API entegrasyonu, API integration, kurumsal yazılım, enterprise software, e-ticaret çözümleri, e-commerce solutions, responsive design, responsive tasarım, kullanıcı deneyimi, user experience, kullanıcı arayüzü, user interface, product design, ürün tasarımı, proje yönetimi, project management, agile development, çevik yazılım, digital strategy, dijital strateji" />
+    <link rel="canonical" href="https://codevia.tech/" />
+    <meta name="theme-color" content="#0f172a" />
+
+    <!-- Favicons -->
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <!-- Optional high-res icons (Android) -->
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Codevia - Ideas from You, Codes from Us" />
+    <meta property="og:description" content="A technology company that transforms your ideas into digital solutions." />
+    <meta property="og:image" content="/preview.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://codevia.tech/" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Codevia - Ideas from You, Codes from Us" />
+    <meta name="twitter:description" content="A technology company that transforms your ideas into digital solutions." />
+    <meta name="twitter:image" content="/preview.png" />
   </head>
   <body>
     <div id="root"></div>
